removed dups/update readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://db:3306/defsecdb
-spring.datasource.username=${DB_USER:appuser}
-spring.datasource.password=${DB_PASSWORD:apppassword}
+spring.datasource.username=${MYSQL_USER:appuser}
+spring.datasource.password=${MYSQL_PASSWORD:apppassword}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
