--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_USER=appuser
-      - DB_PASSWORD=apppassword
+      - MYSQL_USER=${MYSQL_USER:-appuser}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-apppassword}
     depends_on:
       db:
         condition: service_healthy
