--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # Gradle
 .gradle/
 build/
-!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
 # Java
 *.class
-*.jar
 *.war
 *.nar
 *.ear
@@ -16,6 +14,10 @@ build/
 *.rar
 hs_err_pid*
 replay_pid*
+
+# JAR files (but keep Gradle wrapper)
+*.jar
+!gradle/wrapper/gradle-wrapper.jar
 
 # Spring Boot
 *.log
@@ -79,6 +81,9 @@ temp/
 *.temp
 *~
 
-# Application specific
-application-*.properties
+# Application specific - exclude sensitive config but keep dev profile
+application-local.properties
+application-prod.properties
+application-production.properties
 !application.properties
+!application-dev.properties
